# advofcode

./: .gitignore  pyproject.toml
2021/day1/: 2021_day1.py
2021/day2/: 2021_day2.py
aoc_2021/day1/: aoc_2021_day1.py  test_aoc_2021_day1.py
aoc_2021/day2/: aoc_2021_day2.py  test_aoc_2021_day2.py
aoc_2021/day3/: aoc_2021_day3.py  test_aoc_2021_day3.py
aoc_2024/: adv01.py  adv02.py  adv03.py  adv04.py  adv05.py  test_adv01.py  test_adv02.py  test_adv03.py  test_adv04.py  test_adv05.py
