[tool.poetry]
name = "advent of code"
version = "0.1.0"
description = ""
authors = ["roynux <roynux@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
black = "^24.10.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
